tests/errors/control-flow-ref-mut-runtime-sequence-temporary.ari
fn main() -> i64 {
  var values: Vec[i64] = [1, 2];
  if let [ref mut head, ..] = values.as_slice() {
    return 1;
  }
  return 0;
}
